--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ heroku3
 motor
 pillow==9.5.0
 psutil
-py-tgcalls==0.9.2
+py-tgcalls
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
@@ -20,6 +20,7 @@ speedtest-cli
 spotipy
 tgcrypto
 unidecode
+uvloop
 yt-dlp
 youtube-search
 youtube-search-python
